Add bitsery code

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory (json_serialization)
 add_subdirectory (library_loading)
 if (MAX_CXX_STANDARD GREATER_EQUAL 14)
     add_subdirectory (scripting)
+    add_subdirectory (serialization)
 else()
     message(WARNING "Cannot generate scripting example, because at least C++14 needed")
 endif()
